# hybrid_rag

./: .env.example  .gitignore  Dockerfile  README.md  app.py  dataset_usage_guide.md  docker-compose.yml  main.py  pyproject.toml  walkthrough.md  架構書
api/: __init__.py
api/routes/: __init__.py
core/: __init__.py  config.py  database.py  logging.py
models/: __init__.py  document.py  response.py
repositories/: __init__.py  document_repository.py
scripts/: calculate_metrics.py  evaluate.py  evaluate_answers.py  ingest_data.py  run_all_queries.py  run_query.py
services/: __init__.py  embedding_service.py  generation_service.py  ingestion_service.py  rag_service.py  retrieval_service.py
src/: calculate_metrics.py  data_preprocess.py  db_manager.py  drop_db.py  embedding.py  evaluate.py  generator.py  ingest_data.py  rag.py  retriever.py  streamlit_app.py  test_retrieval.py  update_embeddings.py
