[project]
name = "hybrid-rag"
version = "0.2.0"
description = "Hybrid RAG - 混合式檢索增強生成系統"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "openai>=2.16.0",
    "pymongo>=4.16.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
ui = [
    "streamlit>=1.53.1",
]
all = [
    "hybrid-rag[dev,api,ui]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "repositories", "services", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
